# fuel-forecast

./: .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: deploy.yml
js/: package-lock.json  package.json
js/src/: App.tsx
py/: Dockerfile  main.py  pyproject.toml
py/api/: predict_fuel_price.py
py/functions/predict_price/: predict_price.py  requirements.txt
py/functions/refresh_latest_prices/: .env.template  refresh_latest_prices.py  requirements.txt
py/ml/: model.pkl  model.py  model_test.py  pyproject.toml
terraform/: .terraform.lock.hcl  main.tf  predict_price.tf  providers.tf  refresh_latest_prices.tf
terraform/lambda_function/: main.tf
