[project]
name = "fuel-price-predictor"
version = "1.0"
description = "App to predict future NSW fuel prices by individual stations"
authors = [
    {name = "Chris Marwick",email = "chris_marwick@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flypipe (>=5.0.0,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pyspark (>=4.1.1,<5.0.0)",
    "grpcio-status (>=1.76.0,<2.0.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
